# ADE-stable-1.0

./: .cursorrules  .eslintrc.cjs  .eslintrc.json  .gitignore  1_User_Workflow_Analysis.md  2_ADE_Capability_Targets.md  3_Infrastructure_Gap_Analysis.md  4_Implementation_Plan.md  4_Model_Architecture_Assessment.md  ADE_LOCAL_TESTING_AND_DEPLOYMENT_GUIDE.md  ADE_PROJECT_ANALYSIS.md  ADE_Platform_Enhancement_Report.md  ADE_STRATEGY.md  Autonomous_Project_Completion_Cost_Optimization.md  CHANGELOG.md  Dockerfile.backend  Dockerfile.frontend  IMPLEMENTATION_PLAN.md  Intelligent Agent Orchestration Dashboard mockup.txt  LOCAL_TESTING_PLAN.md  PROJECT_CONTEXT.md  PROJECT_MANAGEMENT.md  PROJECT_STATE.md  README.md  WINDSURF_RULES.md  ade_diagnosis_report.json  baseline_metrics.json  build_and_test.py  cmd.txt  context.txt  convert_to_pdf.py  create_docker_volumes.ps1  daemon.json  dev-workflow.sh  dev.sh  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.yml  error_patterns.json  fix_imports.py  (+27 more)
.boundaries/: commands.json
.cursor/: README.md  (+1 more)
model-training/: .gitignore  Dockerfile.dev  README.md  launch_trainer.bat  pyproject.toml  pytest.ini  requirements.txt  setup.py
model-training/config/: default_config.json
model-training/docs/: TUTORIAL.md
model-training/scripts/: manage_versions.py  run_ade_integration.py  run_pipeline.py
model-training/src/ade/: data_capture.py
model-training/src/ade_model_training/: config.py  main.py  models.py  monitoring.py  trainer.py  training_strategies.py
model-training/src/cloud/: cloud_manager.py
model-training/src/evaluation/: debug_evaluator.py
model-training/src/pipeline/: data_pipeline.py  transforms.py
model-training/src/refactoring/: code_metrics.py  metrics_analyzer.py  metrics_visualizer.py  refactoring_trainer.py
model-training/src/registry/: model_registry.py
model-training/src/web/: app.py
model-training/src/web/templates/: index.html
model-training/tests/: conftest.py  test_ade_integration.py  test_cloud_manager.py  test_config.py  test_constants.py  test_data.py  test_data_capture.py  test_debug_assistance.py  test_exceptions.py  test_gui.py  test_launch.py  test_logger.py  test_main.py  test_metrics.py  test_metrics_analyzer.py  test_metrics_visualizer.py  test_model.py  test_optimizer.py  test_refactoring_trainer.py  test_scheduler.py  test_startup_manager.py  test_trainer.py  test_types.py  test_utils.py  test_visualization.py  test_visualizer.py  test_web_app.py
(+2153 files in other folders)
