[tool.poetry]
name = "ade-platform"
version = "0.1.0"
description = "Autonomous Development Environment Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
fastapi = "^0.109.2"
uvicorn = "^0.27.1"
pydantic = "^2.7.0"
pydantic-settings = "^2.8.1"
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-multipart = "^0.0.6"
motor = "^3.3.2"
redis = "^5.0.1"
prometheus-client = "^0.19.0"
prometheus_fastapi_instrumentator = "^5.7.1"
python-dotenv = "^1.0.0"
httpx = ">=0.23.0,<0.24.0"
tenacity = "^8.2.3"

[tool.poetry.group.ml.dependencies]
openai = "^1.12.0"
anthropic = "^0.18.1"
google-cloud-aiplatform = "^1.42.0"
groq = "^0.1.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 