[tool.poetry]
name = "model-training"
version = "0.1.0"
description = "Model Training Service for ADE Platform"
authors = ["Your Name <your.email@example.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.10,<4.0"
flask = "^2.0.0"
requests = "^2.26.0"
pandas = "^1.3.0"
numpy = "^1.21.0"
boto3 = "^1.18.0"
google-cloud-storage = "^2.0.0"
plotly = "^5.3.0"
dash = "^2.0.0"
dash-bootstrap-components = "^0.13.0"
matplotlib = "^3.5.0"
seaborn = "^0.11.0"
debugpy = "^1.6.7"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-asyncio = "^0.23.5"
pytest-cov = "^4.1.0"
pytest-mock = "^3.12.0"
pytest-timeout = "^2.3.0"
pytest-xdist = "^3.5.0"
pytest-randomly = "^3.15.0"
pytest-sugar = "^1.0.0"
pytest-html = "^4.1.1"
pytest-metadata = "^3.1.1"
pytest-benchmark = "^5.1.0"
pytest-env = "^1.1.5"
pytest-mypy = "^0.10.3"
pytest-pylint = "^0.21.0"
pytest-flake8 = "^1.3.0"
pytest-black = "^0.6.0"
pytest-isort = "^4.0.0"
pytest-docstyle = "^2.0.1"
pytest-pydocstyle = "^2.4.0"
pytest-pycodestyle = "^2.4.1"
black = "^24.1.0"
isort = "^5.13.0"
flake8 = "^7.0.0"
mypy = "^1.8.0"
sphinx = "^7.2.0"
sphinx-rtd-theme = "^2.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 